Add server JS to Python

--- a/Proyecto_1/Website/templates/index.html
+++ b/Proyecto_1/Website/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>House Control Panel</title>
@@ -75,5 +76,6 @@
   </div>
 
   <script src="{{ url_for('static', filename='script.js') }}"></script>
+
 </body>
 </html>
